<resources>
    <string name="app_name">My First App</string>
    <string name="schedule_name_hint">Enter Schedule Name</string>
    <string name="number_sections_hint">Enter Number of Sections</string>
    <string name="button_confirm">Confirm</string>
    <string name="first_section">First Section:</string>
    <string name="second_section">Second Section:</string>
    <string name="third_section">Third Section:</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="name">Name</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
</resources>
